--- a/style.css
+++ b/style.css
@@ -1,16 +1,68 @@
+html {
+    background: linear-gradient(to right top, #f3ff17, #fae200, #fbc500, #f8a800, #f18c09) no-repeat center center fixed;
+    background-size: cover;
+    height: 100%;
+    overflow: hidden;
+  }
+
 body {
-    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    font-family: 'Dela Gothic One', cursive;
 }
 
+<!--FORM-->
 input, button, .list {
     margin-top: 20px;
 }
 
+
+/*BUTTON*/
+.button {
+   display: flex;
+   flex-direction: column;
+}
+
+::placeholder {
+    text-align: center;
+  }
+
+button {
+    padding: 10px;
+    text-decoration: none;
+    border: 1px solid rgb(146, 148, 248);
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+button:hover {
+    box-shadow: 1px 1px 25px 10px rgba(146, 148, 248, 0.4);
+  }
+  
+button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      120deg,
+      transparent,
+      #009DFF,
+      transparent
+    );
+    transition: all 650ms;
+  }
+  
+button:hover:before {
+    left: 100%;
+  }
+
 h1{
-    margin-bottom: 0;
+    /* margin-bottom: 0; */
     margin-top: 20%;
 }
