--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
 html {
+    height: 100%;
     background: linear-gradient(to right top, #f3ff17, #fae200, #fbc500, #f8a800, #f18c09) no-repeat center center fixed;
     background-size: cover;
-    height: 100%;
     overflow: hidden;
   }
 
 body {
+     height: 100%;
+    width: 100%;
+     margin : 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
     font-family: 'Dela Gothic One', cursive;
+   
+
 }
 
 <!--FORM-->
@@ -81,6 +85,12 @@ button:hover:before {
     outline: none;
 }
 
+input[type="text"]
+{
+    font-family: 'Dela Gothic One', cursive;
+    user-select: none;
+}
+
 
 h1{
     /* margin-bottom: 0; */
@@ -90,6 +100,36 @@ h1{
 
 /* LIST */
 
+li {
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+ }
+
 .check {
     text-decoration: line-through;
+}
+
+/*TEXT*/
+
+.info{
+    font-size: 10px;
+}
+
+/* FOOTER */
+
+.info {
+    display: flex;
+   justify-content: space-around;
+    align-self: flex-end;
+    height: auto;
+    width: 100%;
+    margin-right: 0;
+    margin-left: 0;
+    margin-top: auto;
+
 }
