--- a/style.css
+++ b/style.css
@@ -114,6 +114,20 @@ li {
     text-decoration: line-through;
 }
 
+#list{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    height: 55%;
+    width : 70%;
+    overflow: hidden;
+    margin-right: 20px;
+    margin-left: 20px;
+
+}
+
 /*TEXT*/
 
 .info{
