--- a/style.css
+++ b/style.css
@@ -146,3 +146,18 @@ li {
     margin-top: auto;
 
 }
+
+
+
+@media only screen and (max-width: 600px) {
+    .info {
+        display: flex;
+        flex-direction: column;
+       justify-content: space-around;
+        align-self: flex-end;
+        height: auto;
+        width: 95%;
+        margin-top: auto;
+    
+    }
+  }
