--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ input, button, .list {
 
 /*BUTTON*/
 .button {
+   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    display: flex;
    flex-direction: column;
    outline: none;
@@ -82,6 +83,7 @@ button:hover:before {
 /*INPUT*/
 
 #input{
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 20px;
     border: 2px solid #EB1212;
     padding: 5px;
